fix asset in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#053725">
     <title>Download Pepi Plus</title>
-    <link rel="icon" type="image/webp" href="./public/assetspepi-plus-logo.webp">
+    <link rel="icon" type="image/webp" href="public/assetspepi-plus-logo.webp">
     <style>
         * {
             margin: 0;
@@ -313,7 +313,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="./public/assetspepi-plus-logo.webp" alt="Pepi Plus Logo">
+            <img src="public/assetspepi-plus-logo.webp" alt="Pepi Plus Logo">
         </div>
 
         <h1>Pepi Plus</h1>
@@ -331,7 +331,7 @@
         <div class="store-buttons">
             <a href="https://apps.apple.com/id/app/pepi-plus/id6752885751" class="store-button app-store-btn"
                 target="_blank">
-                <img src="./public/assetsapple-logo.png" style="width: 24px" />
+                <img src="public/assetsapple-logo.png" style="width: 24px" />
                 <div class="button-text">
                     <span class="small">Download on the</span>
                     <span class="large">App Store</span>
@@ -340,7 +340,7 @@
 
             <a href="https://play.google.com/store/apps/details?id=id.loyal.pepito&pcampaignid=web_share"
                 class="store-button play-store-btn" target="_blank">
-                <img src="./public/assetsplaystore-logo.png" style="width: 24px" />
+                <img src="public/assetsplaystore-logo.png" style="width: 24px" />
                 <div class="button-text">
                     <span class="small">Get it on</span>
                     <span class="large">Google Play</span>
