change link to pepi portal

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <!-- Meta Redirect (fallback) -->
     <meta
       http-equiv="refresh"
-      content="0; url=https://loyalty.pepito.co.id/download-app"
+      content="0; url=https://pepi.portal.co.id/download-app"
     />
 
     <script>
       // JavaScript Redirect
-      window.location.replace("https://loyalty.pepito.co.id/download-app");
+      window.location.replace("https://pepi.portal.co.id/download-app");
     </script>
   </head>
   <body>
     <p>
       If you are not redirected automatically,
-      <a href="https://loyalty.pepito.co.id/download-app"> click here </a>.
+      <a href="https://pepi.portal.co.id/download-app"> click here </a>.
     </p>
     <script>
       // JavaScript Redirect
-      window.location.replace("https://loyalty.pepito.co.id/download-app");
+      window.location.replace("https://pepi.portal.co.id/download-app");
     </script>
   </body>
 </html>
