--- a/index_bak.html
+++ b/index_bak.html
@@ -282,13 +282,13 @@
                 var redirectUrl;
                 var storeName;
                 if (/android/i.test(ua)) {
-                    redirectUrl = "https://play.google.com/store/apps/details?id=id.loyal.pepito&pcampaignid=web_share";
+                    redirectUrl = "https://play.google.com/store/apps/details?id=com.pepito.app";
                     storeName = "Google Play Store";
                 } else if (/iPad|iPhone|iPod/.test(ua)) {
-                    redirectUrl = "https://apps.apple.com/id/app/pepi-plus/id6752885751";
+                    redirectUrl = "https://apps.apple.com/id/app/pepi-portal/id6757992868";
                     storeName = "App Store";
                 } else {
-                    redirectUrl = "https://play.google.com/store/apps/details?id=id.loyal.pepito&pcampaignid=web_share";
+                    redirectUrl = "https://play.google.com/store/apps/details?id=com.pepito.app";
                     storeName = "Play Store";
                 }
                 // Show loader with dynamic store name
