[19-Feb-2026] Update Sub Domain url in loyalty -> r

--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Redirecting...</title>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Redirecting...</title>
 
-    <!-- Meta Redirect (fallback) -->
-    <meta
-      http-equiv="refresh"
-      content="0; url=https://loyalty.pepito.co.id/download-app"
-    />
+        <!-- Meta Redirect (fallback) -->
+        <meta
+            http-equiv="refresh"
+            content="0; url=https://r.pepito.co.id/download-app"
+        />
 
-    <script>
-      // JavaScript Redirect
-      window.location.replace("https://loyalty.pepito.co.id/download-app");
-    </script>
-  </head>
-  <body>
-    <p>
-      If you are not redirected automatically,
-      <a href="https://loyalty.pepito.co.id/download-app"> click here </a>.
-    </p>
-    <script>
-      // JavaScript Redirect
-      window.location.replace("https://loyalty.pepito.co.id/download-app");
-    </script>
-  </body>
+        <script>
+            // JavaScript Redirect
+            window.location.replace("https://r.pepito.co.id/download-app");
+        </script>
+    </head>
+    <body>
+        <p>
+            If you are not redirected automatically,
+            <a href="https://r.pepito.co.id/download-app"> click here </a>.
+        </p>
+        <script>
+            // JavaScript Redirect
+            window.location.replace("https://r.pepito.co.id/download-app");
+        </script>
+    </body>
 </html>
